--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 							<p align = left>Hello everyone!<br>My name is Raghav Vishwanath. I'm currently a student studying Electronics and Computer Engineering at VIT Chennai.
 
-							<p align = left> Programming is a huge interest of mine. Some of the languages I know, with varied levels of proficiency in each, are C, C++, Java, Python, HTML, CSS, JavaScript, MATLAB and R. I recently done an internship with IIIT Hyderabad. Most of my work there was related to porting their experiments from Java to JavaScript/HTML.
+							<p align = left> Programming is a huge interest of mine. Some of the languages I know, with varied levels of proficiency in each, are C, C++, Java, Python, HTML, CSS, JavaScript, MATLAB and R. I recently did an internship with IIIT Hyderabad. Most of my work there was related to porting their experiments from Java to JavaScript/HTML.
 
 							<p align = left> Another huge interest of mine is cubing. Cubing has been a hobby of mine for a little over a year now, and with practice I've gotten decently good. I average around 17-18 seconds per solve. Nowhere near record speeds, but definitely better than average.
 
