--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Links to most of my social media accounts are in the menu on the left.<br>Feel free to leave a message here if there's anything you want to know and I'll get in touch with you as soon as I can.</p>
+							<p>Links to most of my social media accounts are in the menu on the left.<br>Feel free to leave a message here if there's anything else you want to know and I'll get in touch with you as soon as I can.</p>
 
 							<form method="post" action="mailto:raghav.vish@gmail.com">
 								<div class="row">
