Added formspree.io for email contact

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 							</header>
 
 							<p>Links to most of my social media accounts are in the menu on the left.<br>Feel free to leave a message here if there's anything else you want to know and I'll get in touch with you as soon as I can.</p>
-
-							<form method="post" action="mailto:raghav.vish@gmail.com">
+							<form action="https://formspree.io/raghav.vish@gmail.com" method="POST" />
+							<!--<form method="post" action="mailto:raghav.vish@gmail.com">-->
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
