--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 							<footer>
 								<a href="#about" class="button scrolly">About Me</a>
+								<a href="#contact" class="button scrolly">Contact</a>
 							</footer>
 
 						</div>
