--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<!--<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>-->
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Get in Touch</span></a></li>
 							</ul>
 						</nav>
 
@@ -61,7 +61,7 @@
 
 							<footer>
 								<a href="#about" class="button scrolly">About Me</a>
-								<a href="#contact" class="button scrolly">Contact</a>
+								<a href="#contact" class="button scrolly">Get in Touch</a>
 							</footer>
 
 						</div>
@@ -155,7 +155,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>Get in Touch</h2>
 							</header>
 
 							<p>Links to most of my social media accounts are in the menu on the left.<br>Feel free to leave a message here if there's anything else you want to know and I'll get in touch with you as soon as I can.</p>
