Added CLick here for more link in photos

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 									
 								</article>
 							</div>
+							<a href="https://photos.app.goo.gl/WNXH9XBQpr5gb8iz5">Click here for more</a>
 						</div>
 
 						</div>
