Added Cubing, and removed About Me button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<!--<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>-->
 							<h1 id="title">Raghav<br>Vishwanath</h1>
 						</div>
 
@@ -25,6 +24,8 @@
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#programming" id="programming-link"><span class="icon solid fa-code">Coding</span></a></li>
+
+								<li><a href="#cubing" id="cubing-link"><span class="icon solid fa-cube">Cubing</span></a></li>	
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-camera">Photography</span></a></li>			
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Get in Touch</span></a></li>
 							</ul>
@@ -60,8 +61,8 @@
 							</header>
 
 							<footer>
-								<a href="#about" class="button scrolly">About Me</a>
-								<!--
+								<!--<a href="#about" class="button scrolly">About Me</a>
+								
 								<a href="#portfolio" class="button scrolly">Photography</a>
 								<a href="#contact" class="button scrolly">Get in Touch</a>
 								-->	
@@ -78,19 +79,16 @@
 								<h2>About Me</h2>
 							</header>
 
-							<!--<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
 
 							<p align = left>Hello everyone!<br>My name is Raghav Vishwanath. I'm currently a student studying Electronics and Computer Engineering at VIT Chennai.
 
-							<p align = left> Programming and Photography are some of my interests. I think I can say I'm decently good at both. More on these later.
+							<p align = left> Coding, Cubing and Photography are some of my interests. I think I can say I'm decently good at them. More on these later.
 
 							<p align = left> Quizzing is also an interest of mine. I have participated in numerous intra-school and inter-school quizzes. The proudest moment in my quzzing career was when I came second in a state-level quiz. I haven't participated in too many quizzes recently but I hope to get back to it soon.
 
-							<p align = left> Another interest of mine is cubing. Cubing has been a hobby of mine for a little over a year now, and with practice I've gotten decently good. I average around 17-18 seconds per solve. Nowhere near record speeds, but definitely better than average.
-
-
 						</div>
 					</section>
+
 
 				<!-- Programming  -->
 					<section id="programming" class="two">
@@ -108,6 +106,19 @@
 					</div>
 					</section>
 
+				<!-- Cubing  -->
+					<section id="cubing" class="two">
+					<div class="container">
+
+						<header>
+							<h2>Cubing</h2>
+						</header>
+
+						<p align = left>Cubing is one of my newer interests. I didn't know how to solve a Rubik's cube until about two and a half years ago, when a random Youtube video about the cube popped up in my Youtube recommendations.
+						<p  align = left>I currently average under 14 seconds on the 3x3 cube, and under 4 seconds on the 2x2. So far, I have only attended two competitions, and hope to attend more in the future. Based on the results of my last competition, I currently rank among the top 500 in the country on 2x2 and 3x3.
+
+					</div>
+					</section>
 				<!-- Photography  -->
 					<section id="portfolio" class="two">
 					<div class="container">
